--- a/home.html
+++ b/home.html
@@ -1,74 +1,112 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/estilos.css" />
+    <link rel="icon" href="img/isotipo.png" />
+    <title>Cam'On</title>
+    <!--Import Google Icon Font-->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <!--Import materialize.css-->
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="css/materialize.min.css"
+      media="screen,projection"
+    />
+    <link href="https://fonts.cdnfonts.com/css/verdana-pro-cond" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/century-gothic" rel="stylesheet">
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/estilos.css" />
-  <link rel="icon" href="img/isotipo.png">
-  <title>Cam'On</title>
-      <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-</head>
-
-<body>
-  <div class="home">
-    <div class="flex-home">
-      <a class="isotipo" href="home.html">
-        <img src="img/isotipo.png" />
-      </a>
-      <div class="logotipo ">
-        <img src="img/logotipo.png" />
+  <body>
+    <div class="home">
+      <div class="flex-home">
+        <a class="isotipo" href="home.html">
+          <img src="img/isotipo.png" />
+        </a>
+        <div class="logotipo">
+          <img src="img/logotipo.png" />
+        </div>
+        <div class="menu">
+          <a href="home.html"> Inicio </a>
+          <a href="guias.html"> Guías </a>
+          <a href="planificador.html"> Planificador </a>
+          <a href="tienda.html"> Tienda </a>
+          <a href="cuenta.html"> Cuenta </a>
+        </div>
+        <div class="linea"></div>
       </div>
-      <div class="menu">
-        <a href="home.html"> Inicio </a>
-        <a href="guias.html"> Guías </a>
-        <a href="planificador.html"> Planificador </a>
-        <a href="tienda.html"> Tienda </a>
-        <a href="cuenta.html"> Cuenta </a>
+      <h2>Planificá tu viaje por Argentina</h2>
+      <a class="boton" href=""> Empezar </a>
+    </div>
+
+    <div class="home-body">
+      <div class="row center-align section">
+        <div class="col s6 right-align">            
+          <div class="guias">
+            <img src="img/guias.jpg" alt="Guías" />
+          </div>
+        </div>
+        <div class="col s6 left-align">
+          <h2>Nuestras</h2>
+          <h1>GUÍAS</h1>
+          <p>
+            Toda la información necesaria para <br> disfrutar tu viaje al máximo.
+          </p>
+          <a class="boton marron" href=""> Explorar </a>
+        </div>
       </div>
-      <div class="linea"></div>
-    </div>
-    <h1>
-      Planificá tu viaje por Argentina
-    </h1>
-    <a class="boton" href="">
-      Empezar
-    </a>
-  </div>
 
-  <div class="flex-home2">
-    
-    <div class="guias">
-      <img src="img/guias.jpg" alt="Guías">
-    </div>
-
-    <div>
-      <h2>
-        Nuestras
-      </h2>
-      <h1>
-        Guías
-      </h1>
-      <p>
-        Toda la información necesaria para disfrutar tu viaje al máximo.
-      </p>
-      <a class="boton" href="">
-        Explorar
-      </a>
+      <div class="row center-align section">
+        <div class="col s6 right-align">
+          <h2>Nuestro</h2>
+          <h1>PLANIFICADOR</h1>
+          <p>
+            Todo lo que necesitas para mantenerte <br> organizado en tus viajes.
+          </p>
+          <a class="boton marron" href=""> Planificar </a>
+        </div>
+        <div class="col s6 left-align">            
+          <div class="guias">
+            <img src="img/guias.jpg"  alt="Guías" />
+          </div>
+        </div>
+      </div>
     </div>
 
-  </div>
-
-
-      <!--JavaScript at end of body for optimized loading-->
-      <script type="text/javascript" src="js/materialize.min.js"></script>
-</body>
-
+    <div class="home-productos"> 
+      <h1>PRODUCTOS MAS VENDIDOS</h1>
+      <div class="flex-productos">
+        <div class="producto">
+          <img  src="img/guias.jpg" alt="Guías"/>
+          <a class="botonproductos" href="">Explorar</a>
+        </div>
+        <div class="producto">
+          <img  src="img/guias.jpg" alt="Guías"/>
+          <a class="botonproductos" href="">Explorar</a>
+        </div>
+        <div class="producto">
+          <img  src="img/guias.jpg" alt="Guías"/>
+          <a class="botonproductos" href="">Explorar</a>
+        </div>
+        <div class="producto">
+          <img  src="img/guias.jpg" alt="Guías"/>
+          <a class="botonproductos" href="">Explorar</a>
+        </div>
+        <div class="producto">
+          <img  src="img/guias.jpg" alt="Guías"/>
+          <a class="botonproductos" href="">Explorar</a>
+        </div>
+      </div>
+    </div>
+    <!--JavaScript at end of body for optimized loading-->
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+  </body>
 </html>
