--- a/home.html
+++ b/home.html
@@ -2,49 +2,51 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/estilos.css" />
-    <link rel="icon" href="img/isotipo.png" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="css/estilos.css"/>
+    <link rel="icon" href="img/isotipo.png"/>
     <title>Cam'On</title>
     <!--Import Google Icon Font-->
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <!--Import materialize.css-->
-    <link
-      type="text/css"
-      rel="stylesheet"
-      href="css/materialize.min.css"
-      media="screen,projection"
-    />
-    <link href="https://fonts.cdnfonts.com/css/verdana-pro-cond" rel="stylesheet">
-    <link href="https://fonts.cdnfonts.com/css/century-gothic" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection"/>
+    <link href="https://fonts.cdnfonts.com/css/verdana-pro-cond" rel="stylesheet"/>
+    <link href="https://fonts.cdnfonts.com/css/century-gothic" rel="stylesheet"/>
     <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
 
   <body>
-    <div class="home">
-      <div class="flex-home">
-        <a class="isotipo" href="home.html">
-          <img src="img/isotipo.png" />
-        </a>
-        <div class="logotipo">
-          <img src="img/logotipo.png" />
+
+   
+    <nav class="header">
+        <div class="nav-wrapper ">
+          <a href="#!" class="isotipo brand-logo"><img src="img/isotipo.png"/></a>
+          <a href="#!" class="logotipo brand-logo center"><img src="img/logotipo.png"/></a>
+          <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons"> menu </i></a>
+          <ul class="right hide-on-med-and-down">
+            <li><a href="guias.html"> Guías </a></li>
+            <li><a href="planificador.html"> Planificador </a></li>
+            <li><a href="tienda.html"> Tienda </a></li>
+            <li><a href="cuenta.html"> Cuenta </a></li>
+          </ul>
         </div>
-        <div class="menu">
-          <a href="home.html"> Inicio </a>
-          <a href="guias.html"> Guías </a>
-          <a href="planificador.html"> Planificador </a>
-          <a href="tienda.html"> Tienda </a>
-          <a href="cuenta.html"> Cuenta </a>
+    </nav> 
+  
+    <ul class="sidenav" id="mobile-demo">
+      <li><a href="guias.html"> Guías </a></li>
+      <li><a href="planificador.html"> Planificador </a></li>
+      <li><a href="tienda.html"> Tienda </a></li>
+      <li><a href="cuenta.html"> Cuenta </a></li>
+    </ul>
+
+     <div class="home">
+        <img src="img/nomad.jpg" alt="Guías" />
+        <div class="textohome">
+          <h2>Planificá tu viaje por Argentina</h2>
+          <a class="boton" href=""> Empezar </a>
         </div>
-        <div class="linea"></div>
-      </div>
-      <h2>Planificá tu viaje por Argentina</h2>
-      <a class="boton" href=""> Empezar </a>
     </div>
 
     <div class="home-body">
@@ -81,7 +83,7 @@
       </div>
     </div>
 
-    <div class="home-productos"> 
+    <!-- <div class="home-productos"> 
       <h1>PRODUCTOS MAS VENDIDOS</h1>
       <div class="flex-productos">
         <div class="producto">
@@ -105,7 +107,8 @@
           <a class="botonproductos" href="">Explorar</a>
         </div>
       </div>
-    </div>
+    </div> -->
+
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
   </body>
