--- a/home.html
+++ b/home.html
@@ -83,7 +83,7 @@
       </div>
     </div>
 
-    <!-- <div class="home-productos"> 
+    <div class="home-productos"> 
       <h1>PRODUCTOS MAS VENDIDOS</h1>
       <div class="flex-productos">
         <div class="producto">
@@ -107,7 +107,7 @@
           <a class="botonproductos" href="">Explorar</a>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
