--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
         <img src="img/nomad.jpg" alt="Guías" />
         <div class="textohome">
           <h2>Planificá tu viaje por Argentina</h2>
-          <a class="boton" href=""> Empezar </a>
+          <a class="botonhome" href=""> Empezar </a>
         </div>
     </div>
 
@@ -56,13 +56,13 @@
             <img src="img/guias.jpg" alt="Guías" />
           </div>
         </div>
-        <div class="col s6 left-align">
+        <div class="textoguias col s6 left-align">
           <h2>Nuestras</h2>
           <h1>GUÍAS</h1>
           <p>
             Toda la información necesaria para <br> disfrutar tu viaje al máximo.
           </p>
-          <a class="boton marron" href=""> Explorar </a>
+          <a class="botonhome marron" href=""> Explorar </a>
         </div>
       </div>
 
@@ -73,7 +73,7 @@
           <p>
             Todo lo que necesitas para mantenerte <br> organizado en tus viajes.
           </p>
-          <a class="boton marron" href=""> Planificar </a>
+          <a class="botonhome marron" href=""> Planificar </a>
         </div>
         <div class="col s6 left-align">            
           <div class="guias">
@@ -82,32 +82,6 @@
         </div>
       </div>
     </div>
-
-    <!-- <div class="home-productos"> 
-      <h1>PRODUCTOS MAS VENDIDOS</h1>
-      <div class="flex-productos">
-        <div class="producto">
-          <img  src="img/guias.jpg" alt="Guías"/>
-          <a class="botonproductos" href="">Explorar</a>
-        </div>
-        <div class="producto">
-          <img  src="img/guias.jpg" alt="Guías"/>
-          <a class="botonproductos" href="">Explorar</a>
-        </div>
-        <div class="producto">
-          <img  src="img/guias.jpg" alt="Guías"/>
-          <a class="botonproductos" href="">Explorar</a>
-        </div>
-        <div class="producto">
-          <img  src="img/guias.jpg" alt="Guías"/>
-          <a class="botonproductos" href="">Explorar</a>
-        </div>
-        <div class="producto">
-          <img  src="img/guias.jpg" alt="Guías"/>
-          <a class="botonproductos" href="">Explorar</a>
-        </div>
-      </div>
-    </div> -->
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
