--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="css/estilos.css"/>
+    <link rel="stylesheet" href="css/materialize-social.css"/>
     <link rel="icon" href="img/isotipo.png"/>
     <title>Cam'On</title>
     <!--Import Google Icon Font-->
@@ -81,6 +82,31 @@
         </div>
       </div>
     </div>
+
+
+    <footer class="page-footer orange lighten-5">
+      <div class="footer">
+        <div class="row">
+          <div class="col l6 s12">
+            <a href="#!"><img class="logotipofooter" src="img/logotipo.png"/></a>
+          </div>
+          <div class="col l4 offset-l2 s12 right-align">
+            <div class="socials">
+            <ul>
+              <a class="brown-text" href="#!">Nosotros</a>
+              <a class="brown-text" href="#!">Contacto</a>
+            </ul>
+              <a class="waves-effect waves-light btn-floating social facebook">
+              <i class="fa fa-facebook"></i> Sign in with facebook</a>
+              <a class="waves-effect waves-light btn-floating social twitter">
+              <i class="fa fa-twitter"></i> Sign in with twitter</a>
+              <a class="waves-effect waves-light btn-floating social instagram">
+              <i class="fa fa-instagram"></i> Sign in with instagram</a>
+            </div>
+          </div>
+        </div>
+         </div>
+    </footer>
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
