home terminado con materialize

--- a/home.html
+++ b/home.html
@@ -77,12 +77,28 @@
         </div>
         <div class="col s6 left-align">            
           <div class="guias">
-            <img src="img/guias.jpg"  alt="Guías" />
+            <img src="img/planificador.jpg"  alt="Guías" />
           </div>
         </div>
       </div>
     </div>
 
+    <div class="productos section center-align">
+      <h1>PRODUCOS MAS VENDIDOS</h1>
+      <div class="row center-align">
+        <div class="col s3"><img src="img/camara.jpg"  alt="Guías" /></div>
+        <div class="col s3"><img src="img/mochila.jpg"  alt="Guías" /></div>
+        <div class="col s3"><img src="img/rinonera.jpg"  alt="Guías" /></div>
+        <div class="col s3"><img src="img/camara2.jpg"  alt="Guías" /></div>
+      </div>
+      <div class="row center-align ">
+        <div class="col s3"><a class="botonproductos" href=""> CÁMARA $200.00 </a></div>
+        <div class="col s3"><a class="botonproductos" href=""> MOCHILA $40.00 </a></div>
+        <div class="col s3"><a class="botonproductos" href=""> RIÑONER $10.00 </a></div>
+        <div class="col s3"><a class="botonproductos" href=""> CÁMARA $200.00 </a></div>
+      </div>
+      <div class="col s3 center-align section"><a class="botonhome marron" href=""> Tienda </a></div>
+    </div>
 
     <footer class="page-footer orange lighten-5">
       <div class="footer">
