arreglos de clase

--- a/home.html
+++ b/home.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="css/estilos.css"/>
+    <link rel="stylesheet" href="css/home.css"/>
+	<link rel="stylesheet" href="css/headerfooter.css"/>
     <link rel="stylesheet" href="css/materialize-social.css"/>
     <link rel="icon" href="img/isotipo.png"/>
     <title>Cam'On</title>
@@ -22,11 +23,11 @@
 
     <nav class="header">
         <div class="nav-wrapper">
-          <a href="#!" class="isotipo brand-logo"><img src="img/isotipo.png"/></a>
-          <a href="#!" class="logotipo brand-logo center"><img src="img/logotipo.png"/></a>
+          <a href="home.html" class="isotipo brand-logo"><img src="img/isotipo.png"/></a>
+          <a href="home.html" class="logotipo brand-logo center"><img src="img/logotipo.png"/></a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons"> menu </i></a>
           <ul class="right hide-on-med-and-down">
-            <li><a href="guias.html"> Guías </a></li>
+            <li><a href="descubri.html"> Guías </a></li>
             <li><a href="planificador.html"> Planificador </a></li>
             <li><a href="tienda.html"> Tienda </a></li>
             <li><a href="cuenta.html"> Cuenta </a></li>
@@ -35,7 +36,7 @@
     </nav> 
   
     <ul class="sidenav" id="mobile-demo">
-      <li><a href="guias.html"> Guías </a></li>
+      <li><a href="descubri.html"> Guías </a></li>
       <li><a href="planificador.html"> Planificador </a></li>
       <li><a href="tienda.html"> Tienda </a></li>
       <li><a href="cuenta.html"> Cuenta </a></li>
@@ -44,8 +45,8 @@
      <div class="home">
         <img src="img/nomad.jpg" alt="Guías" />
         <div class="textohome">
-          <h2>Planificá tu viaje por Argentina</h2>
-          <a class="botonhome" href=""> Empezar </a>
+          <h2 class="flow-text ">Planificá tu viaje por Argentina</h2>
+          <a class=" black-text botonhome waves-effect waves-light btn orange lighten-5" href=""> Empezar </a>
         </div>
     </div>
 
@@ -53,13 +54,13 @@
       <div class="row center-align section">
         <div class="col s6 right-align">            
           <div class="guias">
-            <img src="img/guias.jpg" alt="Guías" />
+            <img class="responsive-img" src="img/guias.jpg" alt="Guías" />
           </div>
         </div>
         <div class="textoguias col s6 left-align">
-          <h2>Nuestras</h2>
-          <h1>GUÍAS</h1>
-          <p>
+          <h2 class="flow-text">Nuestras</h2>
+          <h1 class="flow-text">GUÍAS</h1>
+          <p class ="flow-text">
             Toda la información necesaria para <br> disfrutar tu viaje al máximo.
           </p>
           <a class="botonhome marron" href=""> Explorar </a>
@@ -68,28 +69,28 @@
 
       <div class="row center-align section">
         <div class="col s6 right-align">
-          <h2>Nuestro</h2>
-          <h1>PLANIFICADOR</h1>
-          <p>
+          <h2 class="flow-text">Nuestro</h2>
+          <h1 class="flow-text">PLANIFICADOR</h1>
+          <p class="flow-text">
             Todo lo que necesitas para mantenerte <br> organizado en tus viajes.
           </p>
           <a class="botonhome marron" href=""> Planificar </a>
         </div>
         <div class="col s6 left-align">            
           <div class="guias">
-            <img src="img/planificador.jpg"  alt="Guías" />
+            <img class="responsive-img" src="img/planificador.jpg"  alt="Guías" />
           </div>
         </div>
       </div>
     </div>
 
     <div class="productos section center-align">
-      <h1>PRODUCOS MAS VENDIDOS</h1>
+      <h1 class="flow-text">PPRODUCOS MAS VENDIDOS</h1>
       <div class="row center-align">
-        <div class="col s3"><img src="img/camara.jpg"  alt="Guías" /></div>
-        <div class="col s3"><img src="img/mochila.jpg"  alt="Guías" /></div>
-        <div class="col s3"><img src="img/rinonera.jpg"  alt="Guías" /></div>
-        <div class="col s3"><img src="img/camara2.jpg"  alt="Guías" /></div>
+        <div class="col s3"><img class="responsive-img" src="img/camara.jpg"  alt="Guías" /></div>
+        <div class="col s3"><img class="responsive-img" src="img/mochila.jpg"  alt="Guías" /></div>
+        <div class="col s3"><img class="responsive-img" src="img/rinonera.jpg"  alt="Guías" /></div>
+        <div class="col s3"><img class="responsive-img" src="img/camara2.jpg"  alt="Guías" /></div>
       </div>
       <div class="row center-align ">
         <div class="col s3"><a class="botonproductos" href=""> CÁMARA $200.00 </a></div>
