--- a/descubri.html
+++ b/descubri.html
@@ -1,39 +1,46 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="img/isotipo.png" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<link rel="stylesheet" href="css/headerfooter.css"/>
+    <link rel="stylesheet" href="css/descubri.css"/>
+    <link rel="stylesheet" href="css/materialize-social.css"/>
+    <link rel="icon" href="img/isotipo.png"/>
     <title>Cam'On</title>
     <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
-    <link href="https://fonts.cdnfonts.com/css/verdana-pro-cond" rel="stylesheet" />
-    <link href="https://fonts.cdnfonts.com/css/century-gothic" rel="stylesheet" />
-    <link rel="stylesheet" href="css/descubri.css" />
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection"/>
+    <link href="https://fonts.cdnfonts.com/css/verdana-pro-cond" rel="stylesheet"/>
+    <link href="https://fonts.cdnfonts.com/css/century-gothic" rel="stylesheet"/>
     <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
 <body class="white descubri">
-    <header>
-        <nav class="header" style="position: relative;">
-            <div class="nav-wrapper ">
-                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons"> menu </i></a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="guias.html"> Guías </a></li>
-                    <li><a href="planificador.html"> Planificador </a></li>
-                    <li><a href="tienda.html"> Tienda </a></li>
-                    <li><a href="cuenta.html"> Cuenta </a></li>
-                </ul>
-            </div>
-        </nav>
-    </header>
 
-    <main>
+    <nav class="header">
+        <div class="nav-wrapper">
+          <a href="home.html" class="isotipo brand-logo"><img src="img/isotipo.png"/></a>
+          <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons"> menu </i></a>
+          <ul class="right hide-on-med-and-down">
+            <li><a href="descubri.html"> Guías </a></li>
+            <li><a href="planificador.html"> Planificador </a></li>
+            <li><a href="tienda.html"> Tienda </a></li>
+            <li><a href="cuenta.html"> Cuenta </a></li>
+          </ul>
+        </div>
+    </nav> 
+  
+    <ul class="sidenav" id="mobile-demo">
+      <li><a href="descubri.html"> Guías </a></li>
+      <li><a href="planificador.html"> Planificador </a></li>
+      <li><a href="tienda.html"> Tienda </a></li>
+      <li><a href="cuenta.html"> Cuenta </a></li>
+    </ul>
+
         <div class="container">
             <div class="row">
                 <div class="col s6">
@@ -161,31 +168,32 @@
                 </div>
             </div>
         </div>
-    </main>
+
 
     <footer class="page-footer orange lighten-5">
-        <div class="footer">
-            <div class="row">
-                <div class="col l6 s12">
-                    <a href="#!"><img class="logotipofooter" src="img/logotipo.png" /></a>
-                </div>
-                <div class="col l4 offset-l2 s12 right-align">
-                    <div class="socials">
-                        <ul>
-                            <a class="brown-text" href="#!">Nosotros</a>
-                            <a class="brown-text" href="#!">Contacto</a>
-                        </ul>
-                        <a class="waves-effect waves-light btn-floating social facebook">
-                            <i class="fa fa-facebook"></i> Sign in with facebook</a>
-                        <a class="waves-effect waves-light btn-floating social twitter">
-                            <i class="fa fa-twitter"></i> Sign in with twitter</a>
-                        <a class="waves-effect waves-light btn-floating social instagram">
-                            <i class="fa fa-instagram"></i> Sign in with instagram</a>
-                    </div>
-                </div>
+      <div class="footer">
+        <div class="row">
+          <div class="col l6 s12">
+            <a href="#!"><img class="logotipofooter" src="img/logotipo.png"/></a>
+          </div>
+          <div class="col l4 offset-l2 s12 right-align">
+            <div class="socials">
+            <ul>
+              <a class="brown-text" href="#!">Nosotros</a>
+              <a class="brown-text" href="#!">Contacto</a>
+            </ul>
+              <a class="waves-effect waves-light btn-floating social facebook">
+              <i class="fa fa-facebook"></i> Sign in with facebook</a>
+              <a class="waves-effect waves-light btn-floating social twitter">
+              <i class="fa fa-twitter"></i> Sign in with twitter</a>
+              <a class="waves-effect waves-light btn-floating social instagram">
+              <i class="fa fa-instagram"></i> Sign in with instagram</a>
             </div>
+          </div>
         </div>
+         </div>
     </footer>
+	
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
