--- a/descubri.html
+++ b/descubri.html
@@ -22,14 +22,15 @@
 <body class="white descubri">
 
     <nav class="header">
-        <div class="nav-wrapper">
+        <div class="container nav-wrapper">
           <a href="home.html" class="isotipo brand-logo"><img src="img/isotipo.png"/></a>
+          <a href="home.html" class="logotipo brand-logo center"><img src="img/logotipo.png"/></a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons"> menu </i></a>
           <ul class="right hide-on-med-and-down">
-            <li><a href="descubri.html"> Guías </a></li>
-            <li><a href="planificador.html"> Planificador </a></li>
-            <li><a href="tienda.html"> Tienda </a></li>
-            <li><a href="cuenta.html"> Cuenta </a></li>
+            <li><a class="flow-text" href="guias.html"> Guías </a></li>
+            <li><a class="flow-text" href="planificador.html"> Planificador </a></li>
+            <li><a class="flow-text" href="tienda.html"> Tienda </a></li>
+            <li><a class="flow-text" href="cuenta.html"> Cuenta </a></li>
           </ul>
         </div>
     </nav> 
@@ -170,29 +171,29 @@
         </div>
 
 
-    <footer class="page-footer orange lighten-5">
-      <div class="footer">
-        <div class="row">
-          <div class="col l6 s12">
-            <a href="#!"><img class="logotipofooter" src="img/logotipo.png"/></a>
-          </div>
-          <div class="col l4 offset-l2 s12 right-align">
-            <div class="socials">
-            <ul>
-              <a class="brown-text" href="#!">Nosotros</a>
-              <a class="brown-text" href="#!">Contacto</a>
-            </ul>
-              <a class="waves-effect waves-light btn-floating social facebook">
-              <i class="fa fa-facebook"></i> Sign in with facebook</a>
-              <a class="waves-effect waves-light btn-floating social twitter">
-              <i class="fa fa-twitter"></i> Sign in with twitter</a>
-              <a class="waves-effect waves-light btn-floating social instagram">
-              <i class="fa fa-instagram"></i> Sign in with instagram</a>
-            </div>
-          </div>
-        </div>
-         </div>
-    </footer>
+        <footer class="page-footer orange lighten-5">
+            <div class="container footer">
+              <div class="row">
+                <div class="col l6 s12">
+                  <a href="#!"><img class="logotipofooter" src="img/logotipo.png"/></a>
+                </div>
+                <div class="col l4 offset-l2 s12 right-align">
+                  <div class="socials">
+                  <ul>
+                    <a href="#!">Nosotros</a>
+                    <a href="#!">Contacto</a>
+                  </ul>
+                    <a class="waves-effect waves-light btn-floating social facebook">
+                    <i class="fa fa-facebook"></i> Sign in with facebook</a>
+                    <a class="waves-effect waves-light btn-floating social twitter">
+                    <i class="fa fa-twitter"></i> Sign in with twitter</a>
+                    <a class="waves-effect waves-light btn-floating social instagram">
+                    <i class="fa fa-instagram"></i> Sign in with instagram</a>
+                  </div>
+                </div>
+              </div>
+               </div>
+          </footer>
 	
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
