--- a/home.html
+++ b/home.html
@@ -87,7 +87,7 @@
 
     <div class="home-productos">
       <div class="container center-align">
-        <h1 class="flow-text section">PPRODUCOS MAS VENDIDOS</h1>
+        <h1 class="flow-text section">PRODUCTOS MAS VENDIDOS</h1>
         <div class="row center-align ">
           <div class="col s3 m3 hoverable">
             <img class="responsive-img" src="img/producto1.jpg" alt="Guías" />
