--- a/descubri.html
+++ b/descubri.html
@@ -1,200 +1,207 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<link rel="stylesheet" href="css/headerfooter.css"/>
-    <link rel="stylesheet" href="css/descubri.css"/>
-    <link rel="stylesheet" href="css/materialize-social.css"/>
-    <link rel="icon" href="img/isotipo.png"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/headerfooter.css" />
+    <link rel="stylesheet" href="css/descubri.css" />
+    <link rel="stylesheet" href="css/materialize-social.css" />
+    <link rel="icon" href="img/isotipo.png" />
     <title>Cam'On</title>
     <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection"/>
-    <link href="https://fonts.cdnfonts.com/css/verdana-pro-cond" rel="stylesheet"/>
-    <link href="https://fonts.cdnfonts.com/css/century-gothic" rel="stylesheet"/>
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+    <link href="https://fonts.cdnfonts.com/css/verdana-pro-cond" rel="stylesheet" />
+    <link href="https://fonts.cdnfonts.com/css/century-gothic" rel="stylesheet" />
     <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
 <body class="white descubri">
 
-    <nav class="header">
+    <nav class="header hoverable row">
         <div class="container nav-wrapper">
-          <a href="home.html" class="isotipo brand-logo"><img src="img/isotipo.png"/></a>
-          <a href="home.html" class="logotipo brand-logo center"><img src="img/logotipo.png"/></a>
-          <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons"> menu </i></a>
-          <ul class="right hide-on-med-and-down">
-            <li><a class="flow-text" href="guias.html"> Guías </a></li>
-            <li><a class="flow-text" href="planificador.html"> Planificador </a></li>
-            <li><a class="flow-text" href="tienda.html"> Tienda </a></li>
-            <li><a class="flow-text" href="cuenta.html"> Cuenta </a></li>
-          </ul>
+            <a href="home.html" class="isotipo brand-logo"><img src="img/isotipo.png" /></a>
+            <a href="home.html" class="logotipo brand-logo center"><img src="img/logotipo.png" /></a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons"> menu </i></a>
+            <ul class="right hide-on-med-and-down">
+                <li><a class="flow-text" href="guias.html"> Guías </a></li>
+                <li><a class="flow-text" href="planificador.html"> Planificador </a></li>
+                <li><a class="flow-text" href="tienda.html"> Tienda </a></li>
+                <li><a class="flow-text" href="cuenta.html"> Cuenta </a></li>
+            </ul>
         </div>
-    </nav> 
-  
+    </nav>
+
     <ul class="sidenav" id="mobile-demo">
-      <li><a href="descubri.html"> Guías </a></li>
-      <li><a href="planificador.html"> Planificador </a></li>
-      <li><a href="tienda.html"> Tienda </a></li>
-      <li><a href="cuenta.html"> Cuenta </a></li>
+        <li><a href="descubri.html"> Guías </a></li>
+        <li><a href="planificador.html"> Planificador </a></li>
+        <li><a href="tienda.html"> Tienda </a></li>
+        <li><a href="cuenta.html"> Cuenta </a></li>
     </ul>
 
-        <div class="container">
-            <div class="row">
-                <div class="col s6">
-                    <h1>CÓRDOBA</h1>
-                    <p class="black-text">Córdoba, la capital de la provincia argentina del mismo nombre, es conocida
-                        por su arquitectura colonial española.
-                        Alberga la Manzana Jesuítica, un complejo del siglo XVII con claustros activos, iglesias y el
-                        campus original de la
-                        Universidad Nacional de Córdoba, una de las universidades más antiguas de Sudamérica. El punto
-                        central de la ciudad es la
-                        Plaza San Martín y la Catedral de Córdoba de estilo neobarroco.</p>
-                    <a href="#" class="btn waves-effect waves-light">Añadir a planificador</a>
-                </div>
-                <div class="col s6">
-                    <img src="img/cordoba.png" class="cordoba">
-                </div>
+    <div class="container desc">
+        <div class="row">
+            <div class="col s6 info">
+                <span class="flow-text">Descubrí</span>
+                <h1 class="flow-text">CÓRDOBA</h1>
+                <div class="divider"></div>
+                <p class="black-text flow-text">Córdoba, la capital de la provincia argentina del mismo nombre, es
+                    conocida
+                    por su arquitectura colonial española.
+                    Alberga la Manzana Jesuítica, un complejo del siglo XVII con claustros activos, iglesias y el
+                    campus original de la
+                    Universidad Nacional de Córdoba, una de las universidades más antiguas de Sudamérica. El punto
+                    central de la ciudad es la
+                    Plaza San Martín y la Catedral de Córdoba de estilo neobarroco.</p>
+                <a href="#" class="btn waves-effect waves-light z-depth-4">Añadir a planificador</a>
             </div>
-
-            <div class="row">
-                <h2>ALOJAMIENTOS</h2>
-                <div class="col s3">
-                    <p>Lugares tranquilos con buena conexion a internet</p>
-                    <a href="#" class="btn waves-effect waves-light">Ver todos</a>
-                </div>
-                <div class="col s9">
-                    <div class="col s4">
-                        <div class="card">
-                            <div class="card-image">
-                                <img src="img/dormitorio1.png">
-                                <span class="card-title">AMERIAN PARK</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col s4">
-                        <div class="card">
-                            <div class="card-image">
-                                <img src="img/dormitorio2.png">
-                                <span class="card-title">YRIGOYEN 111</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col s4">
-                        <div class="card">
-                            <div class="card-image">
-                                <img src="img/dormitorio3.png">
-                                <span class="card-title">CASEROS 248</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="col s6">
+                <img src="img/cordoba.png" class="cordoba responsive-img z-depth-5">
             </div>
+        </div>
 
-            <div class="row">
-                <h2>ACTIVIDADES</h2>
-                <div class="col s3">
-                    <p>Paseos recomendados para distraerse</p>
-                    <a href="#" class="btn waves-effect waves-light">Ver todos</a>
-                </div>
-                <div class="col s9">
-                    <div class="col s4">
-                        <div class="card">
-                            <div class="card-image">
-                                <img src="img/actividad1.png">
-                                <span class="card-title">LOS GIGANTES</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col s4">
-                        <div class="card">
-                            <div class="card-image">
-                                <img src="img/actividad2.png">
-                                <span class="card-title">TÚNELES TANINGA</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col s4">
-                        <div class="card">
-                            <div class="card-image">
-                                <img src="img/actividad3.png">
-                                <span class="card-title">PUEBLO ESCONDIDO</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+        <div class="row">
+            <div class="divider z-depth-2"></div>
+            <h2 class="flow-text">ALOJAMIENTOS</h2>
+            <div class="col s3">
+                <p class="flow-text">Lugares tranquilos con buena conexión a internet</p>
+                <a href="#" class="btn waves-effect waves-light z-depth-3">Ver todos</a>
             </div>
-
-            <div class="row">
-                <h2>RESTAURANTES</h2>
-                <div class="col s3">
-                    <p>Imperdible para tus comidas despues de trabajar</p>
-                    <a href="#" class="btn waves-effect waves-light">Ver todos</a>
+            <div class="col s9">
+                <div class="col s4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img class="responsive-img" src="img/dormitorio1.png">
+                            <span class="card-title">AMERIAN PARK</span>
+                        </div>
+                    </div>
                 </div>
 
-                <div class="col s9">
-                    <div class="col s4">
-                        <div class="card">
-                            <div class="card-image">
-                                <img src="img/restaurante1.png">
-                                <span class="card-title">CIENTOVOLANDO</span>
-                            </div>
+                <div class="col s4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img class="responsive-img" src="img/dormitorio2.png">
+                            <span class="card-title">YRIGOYEN 111</span>
                         </div>
                     </div>
+                </div>
 
-                    <div class="col s4">
-                        <div class="card">
-                            <div class="card-image">
-                                <img src="img/restaurante2.png">
-                                <span class="card-title">PIZZA ITALIA</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col s4">
-                        <div class="card">
-                            <div class="card-image">
-                                <img src="img/restaurante3.png">
-                                <span class="card-title">DIRAN</span>
-                            </div>
+                <div class="col s4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img class="responsive-img" src="img/dormitorio3.png">
+                            <span class="card-title">CASEROS 248</span>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
+        <div class="row">
+            <div class="divider z-depth-2"></div>
+            <h2 class="flow-text">ACTIVIDADES</h2>
+            <div class="col s3">
+                <p class="flow-text">Paseos recomendados para distraerse</p>
+                <a href="#" class="btn waves-effect waves-light z-depth-3">Ver todos</a>
+            </div>
+            <div class="col s9">
+                <div class="col s4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img class="responsive-img" src="img/actividad1.png">
+                            <span class="card-title">LOS GIGANTES</span>
+                        </div>
+                    </div>
+                </div>
 
-        <footer class="page-footer orange lighten-5">
-            <div class="container footer">
-              <div class="row">
+                <div class="col s4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img class="responsive-img" src="img/actividad2.png">
+                            <span class="card-title">TÚNELES TANINGA</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col s4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img class="responsive-img" src="img/actividad3.png">
+                            <span class="card-title">PUEBLO ESCONDIDO</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="divider z-depth-2"></div>
+            <h2 class="flow-text">RESTAURANTES</h2>
+            <div class="col s3">
+                <p class="flow-text">Imperdible para tus comidas despues de trabajar</p>
+                <a href="#" class="btn waves-effect waves-light z-depth-3">Ver todos</a>
+            </div>
+
+            <div class="col s9">
+                <div class="col s4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img class="responsive-img" src="img/restaurante1.png">
+                            <span class="card-title">CIENTOVOLANDO</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col s4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img class="responsive-img" src="img/restaurante2.png">
+                            <span class="card-title">PIZZA ITALIA</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col s4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img class="responsive-img" src="img/restaurante3.png">
+                            <span class="card-title">DIRAN</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <footer class="page-footer orange lighten-5">
+        <div class="container footer">
+            <div class="row">
                 <div class="col l6 s12">
-                  <a href="#!"><img class="logotipofooter" src="img/logotipo.png"/></a>
+                    <a href="#!"><img class="logotipofooter" src="img/logotipo.png" /></a>
                 </div>
                 <div class="col l4 offset-l2 s12 right-align">
-                  <div class="socials">
-                  <ul>
-                    <a href="#!">Nosotros</a>
-                    <a href="#!">Contacto</a>
-                  </ul>
-                    <a class="waves-effect waves-light btn-floating social facebook">
-                    <i class="fa fa-facebook"></i> Sign in with facebook</a>
-                    <a class="waves-effect waves-light btn-floating social twitter">
-                    <i class="fa fa-twitter"></i> Sign in with twitter</a>
-                    <a class="waves-effect waves-light btn-floating social instagram">
-                    <i class="fa fa-instagram"></i> Sign in with instagram</a>
-                  </div>
+                    <div class="socials">
+                        <ul>
+                            <a href="#!">Nosotros</a>
+                            <a href="#!">Contacto</a>
+                        </ul>
+                        <a class="waves-effect waves-light btn-floating social facebook">
+                            <i class="fa fa-facebook"></i> Sign in with facebook</a>
+                        <a class="waves-effect waves-light btn-floating social twitter">
+                            <i class="fa fa-twitter"></i> Sign in with twitter</a>
+                        <a class="waves-effect waves-light btn-floating social instagram">
+                            <i class="fa fa-instagram"></i> Sign in with instagram</a>
+                    </div>
                 </div>
-              </div>
-               </div>
-          </footer>
-	
+            </div>
+        </div>
+    </footer>
+
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
