--- a/descubri.html
+++ b/descubri.html
@@ -75,7 +75,7 @@
                 <div class="col s4">
                     <div class="card hoverable">
                         <div class="card-image">
-                            <img class="responsive-img" src="img/dormitorio1.png">
+                            <a href="hotel.html"><img class="responsive-img" src="img/dormitorio1.png"></a>
                             <span class="card-title">AMERIAN PARK</span>
                         </div>
                     </div>
@@ -84,7 +84,7 @@
                 <div class="col s4">
                     <div class="card hoverable">
                         <div class="card-image">
-                            <img class="responsive-img" src="img/dormitorio2.png">
+                            <a href="hotel.html"><img class="responsive-img" src="img/dormitorio2.png"></a>
                             <span class="card-title">YRIGOYEN 111</span>
                         </div>
                     </div>
@@ -93,7 +93,7 @@
                 <div class="col s4">
                     <div class="card hoverable">
                         <div class="card-image">
-                            <img class="responsive-img" src="img/dormitorio3.png">
+                            <a href="hotel.html"><img class="responsive-img" src="img/dormitorio3.png"></a>
                             <span class="card-title">CASEROS 248</span>
                         </div>
                     </div>
