--- a/ofertas.html
+++ b/ofertas.html
@@ -49,20 +49,31 @@
                 <span class="flow-text">Hotel</span>
                 <h1 class="flow-text">YRIGOYEN 111</h1>
                 <div class="divider"></div>
-                <div class="col s6 row">
-                    <h3 class="flow-text center-align">Check-in</h3>
-                    <input type="text" class="timepicker" placeholder="horario check-in">
-                    <input type="text" class="datepicker" id="datepicker" placeholder="Escoge la fecha de ingreso">
+                <div class="col s6 center-align check">
+                    <h3 class="flow-text">Check-in</h3>
+                    <span class="in z-depth-4">20/11</span>
                 </div>
-                <div class="col s6 row">
+                <div class="col s6 center-align check">
                     <h3 class="flow-text center-align">Check-out</h3>
-                    <input type="text" class="timepicker" placeholder="horario check-out">
-                    <input type="text" class="datepicker" id="datepicker" placeholder="Escoge la fecha de salida">
+                    <span class="out z-depth-4">30/11</span>
                 </div>
-                <div class="center-align"><a href="ofertas.html" class="btn waves-effect waves-light z-depth-4">Ver ofertas</a></div>
+                <div>
+                    <div>
+                        <img src="img/despegar.png" class="responsive-img" width="250px">
+                        <a href="ofertas.html" class="btn waves-effect waves-light z-depth-4 more">Ver mas</a>
+                    </div>
+                    <div>
+                        <img src="img/booking.png" class="responsive-img" width="250px">
+                        <a href="ofertas.html" class="btn waves-effect waves-light z-depth-4 more">Ver mas</a>
+                    </div>
+                    <div>
+                        <img src="img/hoteles.png" class="responsive-img" width="250px">
+                        <a href="ofertas.html" class="btn waves-effect waves-light z-depth-4 more">Ver mas</a>
+                    </div>
+                </div>
             </div>
             <div class="col s6">
-                <img src="img/hotel1.png" class="hotel-img responsive-img z-depth-5">
+                <img src="img/hotel1.png" class="hotel-img responsive-img z-depth-5" width="100%">
             </div>
         </div>
 
@@ -72,7 +83,7 @@
             <h2 class="flow-text">UBICACIÓN</h2>
             <div>
                 <i class="medium material-icons">location_on</i>
-                <p class="flow-text ubi">Avenida Hipolito Yrigoyen 111, Córdoba X5000JHB Argentina</p>
+                <p class="flow-text ubi-ofertas">Avenida Hipolito Yrigoyen 111, Córdoba X5000JHB Argentina</p>
             </div>
             <div class="video-container">
                 <iframe
