descubri y hotel terminados

--- a/descubri.html
+++ b/descubri.html
@@ -57,10 +57,23 @@
                     Universidad Nacional de Córdoba, una de las universidades más antiguas de Sudamérica. El punto
                     central de la ciudad es la
                     Plaza San Martín y la Catedral de Córdoba de estilo neobarroco.</p>
-                <a href="#" class="btn waves-effect waves-light z-depth-4">Añadir a planificador</a>
+                <a href="#" class="btn waves-effect waves-light z-depth-2">Añadir a planificador</a>
             </div>
-            <div class="col s6">
-                <img src="img/cordoba.png" class="cordoba responsive-img z-depth-5">
+            <div class="col s6 cordoba">
+                <div class="carousel carousel-slider center z-depth-5">
+                    <div class="carousel-item" href="#one!">
+                        <img src="img/cordoba6.jpg" width="100%">
+                    </div>
+                    <div class="carousel-item" href="#two!">
+                        <img src="img/cordoba3.jpg" width="100%">
+                    </div>
+                    <div class="carousel-item" href="#three!">
+                        <img src="img/cordoba4.jpg" width="100%">
+                    </div>
+                    <div class="carousel-item" href="#five!">
+                        <img src="img/cordoba2.jpg" width="100%">
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -69,7 +82,7 @@
             <h2 class="flow-text">ALOJAMIENTOS</h2>
             <div class="col s3">
                 <p class="flow-text">Lugares tranquilos con buena conexión a internet</p>
-                <a href="#" class="btn waves-effect waves-light z-depth-3">Ver todos</a>
+                <a href="#" class="btn waves-effect waves-light z-depth-2">Ver todos</a>
             </div>
             <div class="col s9">
                 <div class="col s4">
@@ -106,7 +119,7 @@
             <h2 class="flow-text">ACTIVIDADES</h2>
             <div class="col s3">
                 <p class="flow-text">Paseos recomendados para distraerse</p>
-                <a href="#" class="btn waves-effect waves-light z-depth-3">Ver todos</a>
+                <a href="#" class="btn waves-effect waves-light z-depth-2">Ver todos</a>
             </div>
             <div class="col s9">
                 <div class="col s4">
@@ -143,7 +156,7 @@
             <h2 class="flow-text">RESTAURANTES</h2>
             <div class="col s3">
                 <p class="flow-text">Imperdible para tus comidas despues de trabajar</p>
-                <a href="#" class="btn waves-effect waves-light z-depth-3">Ver todos</a>
+                <a href="#" class="btn waves-effect waves-light z-depth-2">Ver todos</a>
             </div>
 
             <div class="col s9">
@@ -202,6 +215,7 @@
         </div>
     </footer>
 
+    <script type="text/javascript" src="js/descubri.js"></script>
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
