--- a/hotel.html
+++ b/hotel.html
@@ -59,10 +59,23 @@
                     <input type="text" class="timepicker" placeholder="horario check-out">
                     <input type="text" class="datepicker" id="datepicker" placeholder="Escoge la fecha de salida">
                 </div>
-                <div class="center-align"><a href="ofertas.html" class="btn waves-effect waves-light z-depth-4">Ver ofertas</a></div>
+                <div class="center-align"><a href="ofertas.html" class="btn waves-effect waves-light z-depth-3">Ver ofertas</a></div>
             </div>
             <div class="col s6">
-                <img src="img/hotel1.png" class="hotel-img responsive-img z-depth-5">
+                <div class="carousel carousel-slider center z-depth-5">
+                    <div class="carousel-item" href="#one!">
+                        <img src="img/hotel1.jpg" width="100%">
+                    </div>
+                    <div class="carousel-item" href="#two!">
+                        <img src="img/hotel2.jpg" width="100%">
+                    </div>
+                    <div class="carousel-item" href="#three!">
+                        <img src="img/hotel3.jpg" width="100%">
+                    </div>
+                    <div class="carousel-item" href="#five!">
+                        <img src="img/hotel4.jpg" width="100%">
+                    </div>
+                </div>
             </div>
         </div>
 
