--- a/ofertas.html
+++ b/ofertas.html
@@ -51,11 +51,11 @@
                 <div class="divider"></div>
                 <div class="col s6 center-align check">
                     <h3 class="flow-text">Check-in</h3>
-                    <span class="in z-depth-4">20/11</span>
+                    <span class="in z-depth-3">20/11</span>
                 </div>
                 <div class="col s6 center-align check">
                     <h3 class="flow-text center-align">Check-out</h3>
-                    <span class="out z-depth-4">30/11</span>
+                    <span class="out z-depth-3">30/11</span>
                 </div>
                 <div>
                     <div>
@@ -73,7 +73,20 @@
                 </div>
             </div>
             <div class="col s6">
-                <img src="img/hotel1.png" class="hotel-img responsive-img z-depth-5" width="100%">
+                <div class="carousel carousel-slider center z-depth-5">
+                    <div class="carousel-item" href="#one!">
+                        <img src="img/hotel1.jpg" width="100%">
+                    </div>
+                    <div class="carousel-item" href="#two!">
+                        <img src="img/hotel2.jpg" width="100%">
+                    </div>
+                    <div class="carousel-item" href="#three!">
+                        <img src="img/hotel3.jpg" width="100%">
+                    </div>
+                    <div class="carousel-item" href="#five!">
+                        <img src="img/hotel4.jpg" width="100%">
+                    </div>
+                </div>
             </div>
         </div>
 
