--- a/descubri.html
+++ b/descubri.html
@@ -191,6 +191,9 @@
     </div>
 
 
+    <div class="container">
+        <div class="divider"></div>
+    </div>
     <footer class="page-footer orange lighten-5">
         <div class="container footer">
             <div class="row">
@@ -203,18 +206,18 @@
                             <a href="#!">Nosotros</a>
                             <a href="#!">Contacto</a>
                         </ul>
-                        <a class="waves-effect waves-light btn-floating social facebook">
+                        <a class="waves-effect waves-light btn-floating social facebook blue darken-4 hoverable">
                             <i class="fa fa-facebook"></i> Sign in with facebook</a>
-                        <a class="waves-effect waves-light btn-floating social twitter">
+                        <a class="waves-effect waves-light btn-floating social twitter blue lighten-1 hoverable">
                             <i class="fa fa-twitter"></i> Sign in with twitter</a>
-                        <a class="waves-effect waves-light btn-floating social instagram">
+                        <a class="waves-effect waves-light btn-floating social instagram indigo lighten-2 hoverable">
                             <i class="fa fa-instagram"></i> Sign in with instagram</a>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
-
+    
     <script type="text/javascript" src="js/descubri.js"></script>
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
