--- a/hotel.html
+++ b/hotel.html
@@ -59,7 +59,8 @@
                     <input type="text" class="timepicker" placeholder="horario check-out">
                     <input type="text" class="datepicker" id="datepicker" placeholder="Escoge la fecha de salida">
                 </div>
-                <div class="center-align"><a href="ofertas.html" class="btn waves-effect waves-light z-depth-3">Ver ofertas</a></div>
+                <div class="center-align"><a href="ofertas.html" class="btn waves-effect waves-light z-depth-3">Ver
+                        ofertas</a></div>
             </div>
             <div class="col s6">
                 <div class="carousel carousel-slider center z-depth-5">
@@ -97,6 +98,9 @@
         <div class="divider"></div>
     </div>
 
+    <div class="container">
+        <div class="divider"></div>
+    </div>
     <footer class="page-footer orange lighten-5">
         <div class="container footer">
             <div class="row">
@@ -109,11 +113,11 @@
                             <a href="#!">Nosotros</a>
                             <a href="#!">Contacto</a>
                         </ul>
-                        <a class="waves-effect waves-light btn-floating social facebook">
+                        <a class="waves-effect waves-light btn-floating social facebook blue darken-4 hoverable">
                             <i class="fa fa-facebook"></i> Sign in with facebook</a>
-                        <a class="waves-effect waves-light btn-floating social twitter">
+                        <a class="waves-effect waves-light btn-floating social twitter blue lighten-1 hoverable">
                             <i class="fa fa-twitter"></i> Sign in with twitter</a>
-                        <a class="waves-effect waves-light btn-floating social instagram">
+                        <a class="waves-effect waves-light btn-floating social instagram indigo lighten-2 hoverable">
                             <i class="fa fa-instagram"></i> Sign in with instagram</a>
                     </div>
                 </div>
